1.2.3 Not Released
==================

 * Fix Unicode encode error in formatCatalogMetadata.py when atct_topic_view.py
   uses it to display in a table a text field (like 'location') whose contents
   can't be encoded to ascii.
   http://dev.plone.org/plone/ticket/7237
   [stevem]

 * Reorder ATDateCriteria schema fields => more intuitive for users.
   [zegor]

 * Fixed a misterious error that happened when the ATContentTypeSchema
   was directly used: the validation layer for the 'id' field wasn't
   being initialized. This fixes http://dev.plone.org/plone/ticket/7221
   [deo]

1.2.2 2007-10-05
==================

 * Fix ATLink XSS issue.
   [alecm, reinout]

 * Update catalogue indexes and metadata list in collection control panel when
   'All fields' requested.
   [ldr]

 * Files and Images don't need to enforce the Title field, since it is pulled
   from the uploaded file name if missing. This fixes
   http://dev.plone.org/plone/ticket/6051, which is a common source of user
   frustration when uploading files/images.

1.2.1 2007-09-12
================

 * Remove use of AT widget rendering from templates used for non-AT types.
   [ldr]

 * Make subject field read-only and invisible for events.  This fixes
   http://dev.plone.org/plone/ticket/6967
   [alecm]

 * Use widget views for standard view templates to simpify inline editing.
   [limi]

1.2.0-final 2007-08-16
======================

 * No longer enforce vocabularies on constraintypes fields, it's essentially
   pointless, and not enforcing them helps workaround a strange bug:
   http://dev.plone.org/plone/ticket/6734
   [alecm]

 * Fixed i18n markup for event date validation error messages.
   [hannosch]

 * Only show related items once instead of twice.
   [wichert]

1.2.0-rc2 2007-06-11
====================

 * Add link validation to event field.
   [alecm]

1.2.0-rc1 2007-06-08
====================

 * Fix concatenation issues between related items and query results in Topics.
   [alecm]
